# sport-events

./: .env.example  README.md  pyproject.toml
sport_events/: database.py  models.py  parser.py
sport_events/scripts/: server.py
